Added Cloudflare web analytics script

--- a/index.html
+++ b/index.html
@@ -651,5 +651,10 @@
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' 
+            data-cf-beacon='{"token": "b39496e5778e4dabb0e72923fe9646e2"}'>
+    </script>
+    <!-- End Cloudflare Web Analytics -->
 
 </body>
